manifests/headlamp/login-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp-login
  namespace: headlamp
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: headlamp
    app.kubernetes.io/name: headlamp
